<resources>
    <string name="app_name">Table Layout</string>
    <string name="button_single_line">单独一行的按钮</string>
    <string name="button_normal">普通按钮</string>
    <string name="button_shrink">收缩的按钮</string>
    <string name="button_stretch">拉伸的按钮</string>
    <string name="button_stretch_too_long">拉伸拉伸拉伸拉伸拉伸一直拉伸的按钮</string>
    <string name="button_normal_1">普通按钮1</string>
    <string name="button_normal_2">普通按钮2</string>
    <string name="button_normal_3">普通按钮3</string>
</resources>
